src/index.css
* {
    margin: 0;
    border: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    width: 300px;
    height: 300px;
    background-color: #082032;
}

#root {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
}

header {
    background-color: #ff4c29;
    text-align: center;
    padding: 5px;
}

nav {
    display: flex;
    justify-content: space-evenly;
}

nav button {
    font-size: 1.9rem;
    background-color: transparent;
    cursor: pointer;
}

main {
    flex-grow: 1;
    color: white;
    border-bottom: 5px solid #2c394b;
    border-left: 5px solid #2c394b;
    border-right: 5px solid #2c394b;
}

